# qr-reader-demo

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: lib.rs  main.rs
