[package]
name = "qr-reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
name = "qr_reader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [
  "macos-private-api",
  "tray-icon",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
tauri-plugin-clipboard-manager = "2.1.0-beta"
screenshots = "0.8"
bardecoder = "0.5"
rand = "0.8"

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-barcode-scanner = { version = "2.0.0-beta" }
tauri-plugin-dialog = { version = "2.0.0-beta" }
